[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nypl_py_utils"
version = "1.10.3"
authors = [
  { name="Aaron Friedman", email="aaronfriedman@nypl.org" },
]
description = "A package containing Python utilities for use across NYPL"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/NYPL/python-utils"
"Bug Tracker" = "https://github.com/NYPL/python-utils/issues"

[project.optional-dependencies]
avro-client = [
    "nypl_py_utils[log-helper]",
    "fastavro==1.12.2",
    "requests==2.33.1"
]
cloudlibrary-client = [
    "nypl_py_utils[log-helper]",
    "requests==2.33.1"
]
kinesis-client = [
    "nypl_py_utils[log-helper]",
    "boto3==1.43.1",
    "botocore==1.43.1"
]
kms-client = [
    "nypl_py_utils[log-helper]",
    "boto3==1.43.1",
    "botocore==1.43.1"
]
mysql-client = [
    "nypl_py_utils[log-helper]",
    "mysql-connector-python==9.7.0"
]
oauth2-api-client = [
    "nypl_py_utils[log-helper]",
    "oauthlib==3.3.1",
    "requests_oauthlib==2.0.0"
]
postgresql-client = [
    "nypl_py_utils[log-helper]",
    "psycopg[binary]==3.3.3"
]
redshift-client = [
    "nypl_py_utils[log-helper]",
    "botocore==1.43.1",
    "redshift-connector==2.1.13"
]
s3-client = [
    "nypl_py_utils[log-helper]",
    "boto3==1.43.1",
    "botocore==1.43.1"
]
secrets-manager-client = [
    "nypl_py_utils[log-helper]",
    "boto3==1.43.1",
    "botocore==1.43.1"
]
sftp-client = [
    "nypl_py_utils[log-helper]",
    "paramiko==4.0.0"
]
snowflake-client = [
    "nypl_py_utils[log-helper]",
    "snowflake-connector-python==4.3.0"
]
config-helper = [
    "nypl_py_utils[kms-client,log-helper]",
    "PyYAML==6.0.3"
]
log-helper = [
    "structlog==25.5.0"
]
obfuscation-helper = [
    "nypl_py_utils[log-helper]",
    "bcrypt==5.0.0"
]
patron-data-helper = [
    "nypl_py_utils[postgresql-client,redshift-client,log-helper]",
    "pandas==3.0.2"
]
research-catalog-identifier-helper = [
    "requests==2.33.1"
]
development = [
    "nypl_py_utils[avro-client,cloudlibrary-client,kinesis-client,kms-client,mysql-client,oauth2-api-client,postgresql-client,redshift-client,s3-client,secrets-manager-client,sftp-client,snowflake-client,config-helper,log-helper,obfuscation-helper,patron-data-helper,research-catalog-identifier-helper]",
    "flake8==7.3.0",
    "freezegun==1.5.5",
    "mock==5.2.0",
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "requests-mock==1.12.1"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = "src"
testpaths = [
    "tests"
]
